misterParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
import sys
from antlr4 import *
from cubo_semantico import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .misterListener import misterListener
else:
    from misterListener import misterListener


class misterParser ( Parser ):
# 0 -> void, 1 -> entero, 2 -> decimal, 3 -> texto, 4 -> lista
    grammarFileName = "java-escape"

    contEnteros = 0

    contDecimal = 0

    contLista = 0

    contTexto = 0

    AuxTipo = None

    AuxTipoVar = None

    AuxVisVar = None

    AuxTipoLista = None

    funcionActual = None

    claseActual = None

    variableActual = None

    stackParametros = []

    contAuxParametroActual = None

    AuxPadre = None

    AuxLongLista = None

    dirPrincipal = {'global':[None, None, None, {}, None, None]}

    semanticaCompuestoAux = None

    semanticaCompuestoAux2 = None

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'INICIO'", u"'SI'", u"'SINO'", u"'MIENTRAS'", 
                     u"'LEER'", u"'IMPRIMIR'", u"'FUNCION'", u"'ENTERO'", 
                     u"'DECIMAL'", u"'TEXTO'", u"'RETORNAR'", u"'LISTA'", 
                     u"'CLASE'", u"'ATRIBUTOS'", u"'METODOS'", u"'HEREDA'", 
                     u"'NADA'", u"'PRIVADO'", u"'PUBLICO'", u"'ASIGNAR'", 
                     u"'&&'", u"'&'", u"'||'", u"'=='", u"'='", u"','", 
                     u"'+'", u"'-'", u"'/'", u"'*'", u"'!='", u"'>='", u"'<='", 
                     u"'<'", u"'>'", u"'('", u"')'", u"'{'", u"'}'", u"'['", 
                     u"']'", u"';'", u"':'", u"'.'" ]

    symbolicNames = [ u"<INVALID>", u"INICIO", u"SI", u"SINO", u"MIENTRAS", 
                      u"LEER", u"IMPRIMIR", u"FUNCION", u"ENTERO", u"DECIMAL", 
                      u"TEXTO", u"RETORNAR", u"LISTA", u"CLASE", u"ATRIBUTOS", 
                      u"METODOS", u"HEREDA", u"NADA", u"PRIVADO", u"PUBLICO", 
                      u"ASIGNAR", u"Y", u"REFERENCIA", u"O", u"IDENTICO", 
                      u"IGUAL", u"COMA", u"SUMA", u"RESTA", u"DIVISION", 
                      u"MULTIPLICACION", u"DIFERENTE", u"MAYORIGUAL", u"MENORIGUAL", 
                      u"MENOR", u"MAYOR", u"PARENTESIS1", u"PARENTESIS2", 
                      u"LLAVE1", u"LLAVE2", u"CORCHETE1", u"CORCHETE2", 
                      u"PUNTOYCOMA", u"DOSPUNTOS", u"PUNTO", u"ID", u"CTENTERO", 
                      u"CTEDECIMAL", u"CTETEXTO", u"WS" ]

    RULE_programa = 0
    RULE_programaAux1 = 1
    RULE_programaAux3 = 2
    RULE_programaAux5 = 3
    RULE_programaAux6 = 4
    RULE_programaAux7 = 5
    RULE_programaAux4 = 6
    RULE_v_vars = 7
    RULE_varsAux1 = 8
    RULE_v_varsDefinicion = 9
    RULE_varsAux2 = 10
    RULE_varsAux3 = 11
    RULE_varsAux4 = 12
    RULE_varsAux5 = 13
    RULE_v_varsAtrib = 14
    RULE_varsAtribAux1 = 15
    RULE_tipo = 16
    RULE_l_list = 17
    RULE_cteL = 18
    RULE_cteLAux1 = 19
    RULE_valor = 20
    RULE_valorAux1 = 21
    RULE_parametros = 22
    RULE_parametrosAux1 = 23
    RULE_parametrosAux2 = 24
    RULE_parametrosAux3 = 25
    RULE_func = 26
    RULE_funcAux1 = 27
    RULE_funcAux2 = 28
    RULE_funcAux3 = 29
    RULE_expresion = 30
    RULE_expresionAux1 = 31
    RULE_expresionAux2 = 32
    RULE_estatuto = 33
    RULE_declaracion = 34
    RULE_declaracionAux1 = 35
    RULE_declaracionAux2 = 36
    RULE_exp = 37
    RULE_expAux1 = 38
    RULE_llamarFunc = 39
    RULE_llamarFuncAux1 = 40
    RULE_llamarFuncAux2 = 41
    RULE_llamarFuncAux3 = 42
    RULE_termino = 43
    RULE_terminoAux1 = 44
    RULE_factor = 45
    RULE_factorAux1 = 46
    RULE_compuesto = 47
    RULE_compuestoAux1 = 48
    RULE_asignacion = 49
    RULE_asignacionAux1 = 50
    RULE_condicion = 51
    RULE_condicionAux1 = 52
    RULE_bloque = 53
    RULE_bloqueAux1 = 54
    RULE_ciclo = 55
    RULE_escritura = 56
    RULE_escrituraAux1 = 57
    RULE_lectura = 58
    RULE_c_class = 59
    RULE_classAux1 = 60
    RULE_classAux2 = 61
    RULE_classAux3 = 62
    RULE_atrib = 63
    RULE_atribAux1 = 64
    RULE_atribAux2 = 65
    RULE_atribAux3 = 66
    RULE_metod = 67
    RULE_metodAux1 = 68
    RULE_metodAux2 = 69
    RULE_metodAux3 = 70

    ruleNames =  [ "programa", "programaAux1", "programaAux3", "programaAux5", 
                   "programaAux6", "programaAux7", "programaAux4", "v_vars", 
                   "varsAux1", "v_varsDefinicion", "varsAux2", "varsAux3", 
                   "varsAux4", "varsAux5", "v_varsAtrib", "varsAtribAux1", 
                   "tipo", "l_list", "cteL", "cteLAux1", "valor", "valorAux1", 
                   "parametros", "parametrosAux1", "parametrosAux2", "parametrosAux3", 
                   "func", "funcAux1", "funcAux2", "funcAux3", "expresion", 
                   "expresionAux1", "expresionAux2", "estatuto", "declaracion", 
                   "declaracionAux1", "declaracionAux2", "exp", "expAux1", 
                   "llamarFunc", "llamarFuncAux1", "llamarFuncAux2", "llamarFuncAux3", 
                   "termino", "terminoAux1", "factor", "factorAux1", "compuesto", 
                   "compuestoAux1", "asignacion", "asignacionAux1", "condicion", 
                   "condicionAux1", "bloque", "bloqueAux1", "ciclo", "escritura", 
                   "escrituraAux1", "lectura", "c_class", "classAux1", "classAux2", 
                   "classAux3", "atrib", "atribAux1", "atribAux2", "atribAux3", 
                   "metod", "metodAux1", "metodAux2", "metodAux3" ]

    EOF = Token.EOF
    INICIO=1
    SI=2
    SINO=3
    MIENTRAS=4
    LEER=5
    IMPRIMIR=6
    FUNCION=7
    ENTERO=8
    DECIMAL=9
    TEXTO=10
    RETORNAR=11
    LISTA=12
    CLASE=13
    ATRIBUTOS=14
    METODOS=15
    HEREDA=16
    NADA=17
    PRIVADO=18
    PUBLICO=19
    ASIGNAR=20
    Y=21
    REFERENCIA=22
    O=23
    IDENTICO=24
    IGUAL=25
    COMA=26
    SUMA=27
    RESTA=28
    DIVISION=29
    MULTIPLICACION=30
    DIFERENTE=31
    MAYORIGUAL=32
    MENORIGUAL=33
    MENOR=34
    MAYOR=35
    PARENTESIS1=36
    PARENTESIS2=37
    LLAVE1=38
    LLAVE2=39
    CORCHETE1=40
    CORCHETE2=41
    PUNTOYCOMA=42
    DOSPUNTOS=43
    PUNTO=44
    ID=45
    CTENTERO=46
    CTEDECIMAL=47
    CTETEXTO=48
    WS=49

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programaAux1(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux1Context,0)


        def programaAux3(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux3Context,0)


        def EOF(self):
            return self.getToken(misterParser.EOF, 0)

        def getRuleIndex(self):
            return misterParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitPrograma(self)

    def insertarFunc(self):
        self.funcionActual = self.getCurrentToken().text
        if self.dirPrincipal.get(self.funcionActual) != None:
            print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Funcion ya existente" )
            self._syntaxErrors = self._syntaxErrors + 1
            return
        if self.claseActual == None:
            self.dirPrincipal[self.funcionActual] = [self.AuxTipo, None, None, {}, [0,0,0,0], []]
        else:
            self.dirPrincipal[self.claseActual][1][self.funcionActual] = [self.AuxTipo, {}, [0,0,0,0],[]]
        self.AuxTipo = None

    def insertarClase(self):
        if self.dirPrincipal.get(self.claseActual) != None:
            print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Clase ya existente" )
            self._syntaxErrors = self._syntaxErrors + 1
            return
        self.dirPrincipal[self.claseActual] = [None, {}, self.AuxPadre, {}, None, None ]
        self.AuxPadre = None

    def insertarVariable(self):
        direccion = None
        isClase = False
        dicAtributos = {}
        if (self.claseActual == None) or (self.claseActual != None and self.funcionActual != None) :
            if self.AuxTipoVar == "ENTERO":
                direccion = self.contEnteros
                self.contEnteros = self.contEnteros + 1
            elif self.AuxTipoVar == "DECIMAL":
                direccion = self.contDecimal
                self.contDecimal = self.contDecimal + 1
            elif self.AuxTipoVar == "TEXTO":
                direccion = self.contTexto
                self.contTexto = self.contTexto + 1
            elif self.AuxTipoVar == "LISTA":
                direccion = self.contLista
                self.contLista = self.contLista + 1
            else:
                isClase = True
                

        tipo = None
        if self.AuxTipoLista == None and self.AuxTipoVar != "LISTA":
            tipo = self.AuxTipoVar
        else:
            tipo = self.AuxTipoVar + "," + self.AuxTipoLista

        if isClase:
            NombrePadre = self.AuxTipoVar
            direccionAux = None
            while True:
                dictAux = self.dirPrincipal[NombrePadre][3]
                for key in dictAux.keys():

                    if dictAux[key][0] == "ENTERO":
                        direccionAux = self.contEnteros
                        self.contEnteros = self.contEnteros + 1
                    elif dictAux[key][0] == "DECIMAL":
                        direccionAux = self.contDecimal
                        self.contDecimal = self.contDecimal + 1
                    elif dictAux[key][0] == "TEXTO":
                        direccionAux = self.contTexto
                        self.contTexto = self.contTexto + 1
                    else:
                        direccionAux = self.contLista
                        self.contLista = self.contLista + 1
                    dicAtributos[key] = [dictAux[key][0], dictAux[key][1], direccionAux]
                NombrePadre = self.dirPrincipal[NombrePadre][2]
                if NombrePadre == None:
                    break

        if self.claseActual == None:
            if self.funcionActual == None:
                if self.dirPrincipal['global'][3].get(self.variableActual) != None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable ya existente" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
                self.dirPrincipal['global'][3][self.variableActual] = [tipo, direccion, dicAtributos]
            else:
                if self.dirPrincipal[self.funcionActual][3].get(self.variableActual) != None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable ya existente" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
                self.dirPrincipal[self.funcionActual][3][self.variableActual] = [tipo, direccion, dicAtributos]
        else:
            if self.funcionActual == None:
                if self.dirPrincipal[self.claseActual][3].get(self.variableActual) != None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable ya existente" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
                self.dirPrincipal[self.claseActual][3][self.variableActual] = [tipo, self.AuxVisVar, direccion, dicAtributos]
            else:
                if self.dirPrincipal[self.claseActual][1][self.funcionActual][1].get(self.variableActual) != None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable ya existente" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
                self.dirPrincipal[self.claseActual][1][self.funcionActual][1][self.variableActual] = [tipo, self.AuxVisVar, direccion, dicAtributos]
        self.variableActual = None

    def checarId(self, variableId):
        if self.claseActual == None:
            if self.funcionActual == None:
                if self.dirPrincipal['global'][3].get(variableId) == None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable no declarada" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
            else:
                if self.dirPrincipal[self.funcionActual][3].get(variableId) == None:
                    if self.dirPrincipal['global'][3].get(variableId) == None:
                        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable no declarada" )
                        self._syntaxErrors = self._syntaxErrors + 1
                        return
        else:
            if self.funcionActual != None:
                if self.dirPrincipal[self.claseActual][1][self.funcionActual][1].get(variableId) == None:
                    if self.dirPrincipal[self.claseActual][3].get(variableId) == None:
                        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Variable no declarada" )
                        self._syntaxErrors = self._syntaxErrors + 1
                        return

    def checarAtributo(self, atributoId):
        varAtributos = None
        if self.claseActual == None:
            if self.funcionActual == None:
                varAtributos = self.dirPrincipal['global'][3][self.semanticaCompuestoAux][2].get(atributoId)
                if varAtributos != None:
                    if varAtributos[1] == 'PRIVADO':
                        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " No se puede acceder al atributo" )
                        self._syntaxErrors = self._syntaxErrors + 1
                        return
                else:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Atributo no declarado" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return

            else:
                varAtributos = self.dirPrincipal[self.funcionActual][3][self.semanticaCompuestoAux][2].get(atributoId)
                if varAtributos != None:
                    if varAtributos[1] == 'PRIVADO':
                        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " No se puede acceder al atributo" )
                        self._syntaxErrors = self._syntaxErrors + 1
                        return
                
                else:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Atributo no declarado" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return

        else:
            if self.funcionActual != None:
                varAtributos = self.dirPrincipal[self.claseActual][1][self.funcionActual][1][self.semanticaCompuestoAux][3].get(atributoId)
                if varAtributos != None:
                    if varAtributos[1] == 'PRIVADO':
                        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " No se puede acceder al atributo" )
                        self._syntaxErrors = self._syntaxErrors + 1
                        return
                else:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Atributo no declarado" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return

    def checarMetodo(self):
        if self.semanticaCompuestoAux2 == None:
            if self.claseActual == None:
                if self.dirPrincipal.get(self.semanticaCompuestoAux) == None:
                    print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Funcion no declarada" )
                    self._syntaxErrors = self._syntaxErrors + 1
                    return
            else:
                self.encontrarFuncionClase(self.claseActual)

        else:
            tipo = None
            if self.claseActual == None:
                if self.funcionActual == None:
                    tipo = self.dirPrincipal['global'][3][self.semanticaCompuestoAux][0]
                    
                else:
                    tipo = self.dirPrincipal[self.funcionActual][3][self.semanticaCompuestoAux][0]
            
            else:
                if self.funcionActual == None:
                    tipo = self.dirPrincipal[self.claseActual][3][self.semanticaCompuestoAux][0]

                else:
                    tipo = self.dirPrincipal[self.claseActual][1][self.funcionActual][1][self.semanticaCompuestoAux][0]
                    
            self.encontrarFuncionClase(tipo)

    def encontrarFuncionClase(self, padre):
        if padre in ['ENTERO','DECIMAL','TEXTO','NADA', 'LISTA']:
            print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " No se puede acceder al metodo" )
            self._syntaxErrors = self._syntaxErrors + 1
            return
        
        while True:
            dictAux = self.dirPrincipal[padre][1]
            for key in dictAux.keys():
                if self.semanticaCompuestoAux2 == key:
                    return
            padre = self.dirPrincipal[padre][2]
            if padre == None:
                break
        print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Funcion no declarada" )
        self._syntaxErrors = self._syntaxErrors + 1
        return

    def encontrarTipoFuncionClase(self, padre):
        while True:
            dictAux = self.dirPrincipal[padre][1]
            for key in dictAux.keys():
                if self.semanticaCompuestoAux2 == key:
                    return dictAux[key][0]
            padre = self.dirPrincipal[padre][2]
            if padre == None:
                break
        return

    def checarClase(self):
        if self.dirPrincipal.get(self.AuxTipoVar) == None:
            print ("Semantic error: line " + str(self.getCurrentToken().line) + ":" + str(self.getCurrentToken().column) + " Clase no declarada" )
            self._syntaxErrors = self._syntaxErrors + 1
            return

    def agregarParametro(self):
        tipo = self.getCurrentToken().text
        if self.claseActual ==  None:
            dic = self.dirPrincipal[self.funcionActual]
            dic[5].append(tipo)
            if tipo == "ENTERO":
                dic[4][0] = dic[4][0] + 1
            elif tipo == "DECIMAL":
                dic[4][1] = dic[4][1] + 1
            elif tipo == "TEXTO":
                dic[4][2] = dic[4][2] + 1
            elif tipo == "LISTA":
                dic[4][3] = dic[4][3] + 1
        else: 
            dic = self.dirPrincipal[self.claseActual][1][self.funcionActual]
            dic[3].append(tipo)
            if tipo == "ENTERO":
                dic[2][0] = dic[2][0] + 1
            elif tipo == "DECIMAL":
                dic[2][1] = dic[2][1] + 1
            elif tipo == "TEXTO":
                dic[2][2] = dic[2][2] + 1
            elif tipo == "LISTA":
                dic[2][3] = dic[2][3] + 1
    
    def checarParametro(self):
        variableParametro = self.getCurrentToken().text
        


    def programa(self):

        localctx = misterParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            auxiliar = cuboSemantico()
            self.programaAux1()
            self.state = 143
            self.programaAux3()
            self.state = 144
            self.match(misterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def v_vars(self):
            return self.getTypedRuleContext(misterParser.V_varsContext,0)


        def programaAux1(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux1Context,0)


        def c_class(self):
            return self.getTypedRuleContext(misterParser.C_classContext,0)


        def getRuleIndex(self):
            return misterParser.RULE_programaAux1

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux1(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux1(self)




    def programaAux1(self):

        localctx = misterParser.ProgramaAux1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programaAux1)
        try:
            self.state = 153
            token = self._input.LA(1)
            if token in [misterParser.ENTERO, misterParser.DECIMAL, misterParser.TEXTO, misterParser.LISTA, misterParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.v_vars()
                self.state = 147
                self.programaAux1()

            elif token in [misterParser.CLASE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.c_class()
                self.state = 150
                self.programaAux1()

            elif token in [misterParser.FUNCION]:
                self.enterOuterAlt(localctx, 3)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)

        finally:
            self.exitRule()
        return localctx

    class ProgramaAux3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(misterParser.FUNCION, 0)

        def programaAux5(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux5Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_programaAux3

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux3(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux3(self)




    def programaAux3(self):

        localctx = misterParser.ProgramaAux3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programaAux3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(misterParser.FUNCION)
            self.state = 156
            self.programaAux5()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(misterParser.ENTERO, 0)

        def programaAux6(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux6Context,0)


        def DECIMAL(self):
            return self.getToken(misterParser.DECIMAL, 0)

        def programaAux7(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux7Context,0)


        def TEXTO(self):
            return self.getToken(misterParser.TEXTO, 0)

        def NADA(self):
            return self.getToken(misterParser.NADA, 0)

        def getRuleIndex(self):
            return misterParser.RULE_programaAux5

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux5(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux5(self)




    def programaAux5(self):

        localctx = misterParser.ProgramaAux5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programaAux5)
        try:
            self.state = 166
            token = self._input.LA(1)
            if token in [misterParser.ENTERO]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(misterParser.ENTERO)
                self.state = 159
                self.AuxTipo = "ENTERO"
                self.programaAux6()

            elif token in [misterParser.DECIMAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(misterParser.DECIMAL)
                self.state = 161
                self.AuxTipo = "DECIMAL"
                self.programaAux7()

            elif token in [misterParser.TEXTO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.match(misterParser.TEXTO)
                self.state = 163
                self.AuxTipo = "TEXTO"
                self.programaAux7()

            elif token in [misterParser.NADA]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.match(misterParser.NADA)
                self.state = 165
                self.AuxTipo = "NADA"
                self.programaAux7()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(misterParser.INICIO, 0)

        def func(self):
            return self.getTypedRuleContext(misterParser.FuncContext,0)


        def programaAux7(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux7Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_programaAux6

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux6(self)
